# ESP32Multiprocessing

./: LICENSE
accel-multi/: Cargo.toml
accel-multi/src/: main.rs
accel-sequence/: Cargo.toml
accel-sequence/src/: main.rs
read-serial/: Cargo.toml
read-serial/src/: main.rs
