[package]
name = "accel-multi"
version = "0.1.0"
authors = ["Joe Doyle <nycjoedoyle@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32-hal", version = "0.13.0" }
esp-backtrace = { version = "0.7.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
spin = "0.9.8"
